--- a/.github/workflows/docker-image-pythons.yml
+++ b/.github/workflows/docker-image-pythons.yml
@@ -35,7 +35,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: ./
-        file: ./Dockerfile
+        file: ./Dockerfile-pythons
         platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
-        tags: willy0912/kubify-local:docker-all-pythons
+        tags: willy0912/kubify-local:main-pythons
