--- a/dockers/Dockerfile-pythons-cached
+++ b/dockers/Dockerfile-pythons-cached
@@ -1,3 +1,4 @@
+# OPTIONAL
 FROM willy0912/kubify-local:main
 
 RUN apt install -y  --no-install-recommends python3.7 python3.8 python3.9 python3.10
