--- a/.github/workflows/docker-image-pythons.yml
+++ b/.github/workflows/docker-image-pythons.yml
@@ -35,7 +35,16 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: ./
-        file: ./Dockerfile-pythons
+        file: ./Dockerfile
         platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
-        tags: willy0912/kubify-local:main-pythons
+        tags: willy0912/kubify-local:main
+    -
+      name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: ./
+        file: ./Dockerfile-tox
+        platforms: linux/amd64,linux/arm64
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: willy0912/kubify-local:main-py378910-tox
