--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,7 +46,8 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: ./
-        file: ./Dockerfile
+        # file: ./Dockerfile
+        file: ./dockers/Dockerfile-cached
         platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
         tags: willy0912/kubify-local:main
