--- a/kubify/ops/dockers/Dockerfile-pythons-full
+++ b/kubify/ops/dockers/Dockerfile-pythons-full
@@ -36,7 +36,7 @@ RUN curl -Lo ./kind "https://kind.sigs.k8s.io/dl/v0.14.0/kind-$(uname)-amd64" &&
 
 # Your services folder gets mounted automatically (for Kubify's rapid testing engine):
 COPY ./ansible.cfg /etc/ansible/
-COPY ./ansible /tmp/ansible
+COPY ./kubify/ops/ansible /tmp/ansible
 RUN rm -rf /src/kubify/.git /src/kubify/
 RUN ansible-playbook --connection=local "/tmp/ansible/install_kubify_on_debian_ubuntu_and_wsl2.yaml" --ask-become-pass -e ansible_python_interpreter=`which python3`
 RUN apt install -y  --no-install-recommends libxml2 libxml2-dev libxslt-dev
