--- a/kubify/ops/dockers/Dockerfile-cached
+++ b/kubify/ops/dockers/Dockerfile-cached
@@ -3,6 +3,10 @@ FROM willy0912/kubify-local:main
 
 COPY . .
 
+# os security updates automated (and is default container for services that don't have Dockerfile) !!
+RUN apt update
+RUN apt -y upgrade
+
 RUN make clean
 RUN make pip
 RUN make package
