adding more functions from bash, tests for app_constants dir paths

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,5 +28,19 @@
             "console":"integratedTerminal",
             "envFile": "${workspaceFolder}/.env"
         },
+        {
+            "name": "Python: debug tests",
+            "type": "python",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/kubify",
+            "module": "pytest",
+            "console": "integratedTerminal",
+            "args": [
+                "-v",
+                "../tests"
+            ],
+            "envFile": "${workspaceFolder}/.env"
+        }
+
     ]
 }
