--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,6 @@
 		"docker-compose.yml"
 	],
 	"service": "kubify",
-	"workspaceFolder": "/workspace"
+	"workspaceFolder": "/workspace",
+	"postStartCommand": "kubify up"
 }
