--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,10 +1,13 @@
 # OPTIONAL
-FROM willy0912/kubify-local:main
+FROM willy0912/kubify:main
 
 COPY . .
 
 RUN make clean
-RUN make pip
+RUN make lint
+RUN make help
+RUN make security
+RUN make coverage
 RUN make package
 
 RUN pip install -e .
