--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,12 +2,14 @@ version: '3.9'
 services:
   # Update this to the name of the service you want to work with in your docker-compose.yml file
   kubify:
-    build:
-      context: .
-      dockerfile: .devcontainer/Dockerfile
+    # image: willy0912/kubify:main
+    # build:
+    #   context: .
+    #   dockerfile: .devcontainer/Dockerfile
 
     volumes:
-      - .:/workspace:cached
-      - /var/run/docker.dock:/var/run/docker.sock
-      - ~/.aws:/root/.aws
+      - ./:/src/kubify:cached
+      - ~/kubify/kubedb.txt:/root/kubify/kubedb.txt:cached
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ~/.aws:/root/.aws:cached
     command: /bin/sh -c "while sleep 1000; do :; done"
