--- a/kubify/ops/dockers/Dockerfile-pythons-cached
+++ b/kubify/ops/dockers/Dockerfile-pythons-cached
@@ -1,5 +1,5 @@
 # OPTIONAL
-FROM willy0912/kubify-local:main
+FROM willy0912/kubify:main
 
 RUN apt install -y  --no-install-recommends python3.7 python3.8 python3.9 python3.10
 RUN apt-get install -y python3.7 python3.8 python3.9 python3.10
