--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [tox]
-envlist = py37, py38, py39, py310, flake8
+envlist = py37, py38, py39, py310, py311, py312, flake8
 
 [travis]
 python =
+    3.12: py312
+    3.11: py311
     3.10: py310
     3.9: py39
     3.8: py38
