--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,21 @@
 	],
 	"service": "kubify",
 	"workspaceFolder": "/src/kubify",
-	"postStartCommand": "make clean && make lint && make help && make security && make package && make coverage && make test" // "kubify up"
+	"postStartCommand": "make clean && make lint && make help && make security && make package && make coverage && make test", // "kubify up"
+	"customizations": {
+		// Configure properties specific to VS Code.
+		"vscode": {
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"amazonwebservices.aws-toolkit-vscode",
+				"eamodio.gitlens",
+				"ms-azuretools.vscode-docker",
+				"hashicorp.terraform",
+				"ms-kubernetes-tools.vscode-kubernetes-tools",
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				// "GitHub.copilot-nightly"
+			]
+		}
+	},
 }
