--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,6 @@
 # 	path = services/example-submodule-service
 # 	url = git@github.com:willyguggenheim/kubify-example-submodule-service.git
 # 	branch = master
+[submodule "kubify/ui/modules/backstage"]
+	path = kubify/ui/modules/backstage
+	url = https://github.com/willyguggenheim/backstage.git
