--- a/BrewFile
+++ b/BrewFile
@@ -1,6 +1,6 @@
-cask "docker"
-brew "tfenv"
+cask "docker", link: true
+brew "tfenv", link: true
 brew "tfsec", link: true
-brew "nvm"
-brew "npm"
-brew "miniconda"
+brew "nvm", link: true
+brew "npm", link: true
+cask "miniconda", link: true
