kubify python migration

--- a/BrewFile
+++ b/BrewFile
@@ -1,10 +1,10 @@
-cask "docker", link: true
+cask "docker"
 brew "tfenv", link: true
 brew "tfsec", link: true
-brew "nvm", link: true
-brew "npm", link: true
+brew "nvm"
+brew "npm"
 cask "miniconda", link: true
+brew "dos2unix", link: true
 brew "kubectl"
 brew "helm"
-brew "minikube" # will be for kubify optional nuc gpu sidecar (so you can develop nvidia on apple silicon)
 brew "kind"
