--- a/.github/workflows/docker-pypi-conda.yml
+++ b/.github/workflows/docker-pypi-conda.yml
@@ -1,27 +1,19 @@
-name: Docker PyPi CI
+name: Docker PyPi Conda Test Release CICD
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    # enable your branch cicd (disable once done testing 
-    # cicd on your branch by commenting next 1 line)
-    branches: [ "python" ]
 
 jobs:
 
   build:
-    # don't change the next 1 line
     runs-on: ubuntu-latest
     steps:
-    # - name: Run on architecture for multiarch
-    #   uses: uraimo/run-on-arch-action@v2.2.0
-    #   arch: arm64,amd64
     - name: actions/checkout
       uses: actions/checkout@v2
       with:
           persist-credentials: false
-    # docker build multi-arch setup
+    # dockers build multi-arch setup
     -
       name: setup-qemu-multiarch
       uses: docker/setup-qemu-action@v2
@@ -31,19 +23,7 @@ jobs:
     - name: pypi-make-package
       id: makepypipackage
       run: python3 setup.py sdist bdist_wheel
-    # pypi package ship
-    - name: release-pypi
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-    -
-      name: login-dockerhub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    # dockerhub image build security package ship
+    # docker arm/amd images build security test package
     -
       name: Build and push
       uses: docker/build-push-action@v3
@@ -53,3 +33,21 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: ${{ github.event_name != 'pull_request' }}
         tags: willy0912/kubify:main
+    # conda ship package
+    - name: release-conda
+      uses: fdiblen/anaconda-action@0.1.7
+      with:
+        envFileName: 'environment.yml'
+    # pypi ship package
+    - name: release-pypi
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
+    # dockerhub ship image
+    -
+      name: login-dockerhub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
