--- a/kubify/ops/ansible/roles/deploy_env/tasks/main.yml
+++ b/kubify/ops/ansible/roles/deploy_env/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Read values
   set_fact:
     kubify_version: "{{ deploy_config | json_query('kubify_version') }}"
-    kubify_cli: "{{ src_dir }}/src/kubify/tool/kubify"
+    kubify_cli: "{{ src_dir }}/var/folders/tool/kubify"
     environment_name: "{{ deploy_config | json_query('metadata.name') }}"
     target_cluster: "{{ deploy_config | json_query('target.cluster') }}"
     services: "{{ deploy_config | json_query('services') }}"
