--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 		"docker-compose.yml"
 	],
 	"service": "kubify",
-	"workspaceFolder": "/src/kubify",
+	"workspaceFolder": "/var/folders",
 	"postStartCommand": "make clean && make lint && make help && make security && make package && make coverage && make test", // "kubify up"
 	"customizations": {
 		// Configure properties specific to VS Code.
