--- a/kubify/ops/ansible/roles/dnsmasq/tasks/main.yml
+++ b/kubify/ops/ansible/roles/dnsmasq/tasks/main.yml
@@ -158,7 +158,7 @@
     path: "/proc/{{ item }}/status"
     state: absent
   with_items: "{{ running_processes.stdout_lines }}"
-  ignore_errors: yes
+  ignore_errors: true
   register: killed_processes
   when: ansible_os_family == "Darwin"
 
