--- a/kubify/ops/ansible/roles/nvidia_docker/handlers/main.yml
+++ b/kubify/ops/ansible/roles/nvidia_docker/handlers/main.yml
@@ -5,4 +5,4 @@
     daemon_reload: yes
     state: restarted
   when: not nvidia_docker_skip_docker_restart
-  ignore_errors: yes
+  ignore_errors: true
