--- a/kubify/ops/templates/k8s/entrypoint/playbook.yml
+++ b/kubify/ops/templates/k8s/entrypoint/playbook.yml
@@ -126,4 +126,4 @@
         line: "{{ item.line }}"
       with_items:
         - { regexp: '^export AWS_PROFILE=',                           line: 'export AWS_PROFILE=default' }
-        - { regexp: '^export PATH=/var/folders(/tools)?/kubify/tool(2)?.*', line: 'export PATH=/var/folders/var/folders/tool:$PATH'}
+        - { regexp: '^export PATH=/var/folders/kubify(/tools)?/kubify/tool(2)?.*', line: 'export PATH=/var/folders/kubify/var/folders/kubify/tool:$PATH'}
