kubify start-all and regression test as a pre-push check

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -45,3 +45,5 @@ recursive-include services *
 recursive-include environments *
 recursive-exclude kubify/._kubify_work *
 recursive-include conda *.yaml
+
+include CODEOWNERS
